# gupnp_samples

./: README.md
doc/: gssdp.md  gupnp-tools.md  gupnp.md
gssdp_examples/: CMakeLists.txt  browser.c  publish.c
gupnp_examples/: CMakeLists.txt  client.c  server.c
gupnp_examples/xml/: VirtualDevice.xml
